Agregado Comisiones y ComisionesDesktop
En el combo que elije el ID plan al momento de cargar el Plan tiene que
recuperar los datos de la base de datos. Esta configurado con la db mia.
Hay que cambiarlo.

--- a/UI.Desktop/Usuarios.resx
+++ b/UI.Desktop/Usuarios.resx
@@ -143,33 +143,33 @@
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIHSURBVDhPY6AbqF8sxFexSiStbLXIutLVImdAuHy18Oqy
-        lSLJIDmoMsIgbSYDK9CQnvLVIn+A+D82XLha5CdQTVf9fgYWqDbsoH6VKA9Qww1kzXMOhfxfe7YIjOce
+        lSLJIDmoMsIgbSYDK9CQnvLVIn+A+D82XLBa5CdQTVf9fgYWqDbsoH6VKA9Qww1kzXMOhfxfe7YIjOce
         DvtfuUYcyXCh8/nr+QWg2lEByDagomswxStPZf3/9P3lf3Tw9ec7sOEwdaCgwOrS8lXCTTBF+69PgGrH
         DY7fmQc3tGy1cCPUGAgoXiTODZQAh9nSEylQLQgA04gOYC4FhSkouKDGMTCUrhEOgGl69ek2VDkC4DIQ
         FCSwMAVGUhjUOKB3VwvPAQn277KFKkUFuAwEgen7vSHyq4RXQo1jYChbJXwEJLjkeCJUGcIQXBgG1pzJ
         h4mdhBoHNHClyE6Q4KJj8VBlFBoI5HSCBHt3WkOVoQKoBigPFUzd5wmRXyWyAGocyIVCZjBNpETKx2/P
         4JFSsUbIBWocPFF/AEmAcgM6wGXg8pPpYHFQssndpsIONQ4CylYLBcE0br3U8P/vvz9QbdjB3mt9cItA
         BQbUGFQAlFwEUzRlrxtW77/98vD/zAN+yIbtZPjPwAg1AhXU1zMwAZPQXJhiEAalTVjhMGmPM1wchEtX
-        C20hWOKAQPlKYafi1UKvkDUj45LVfJ/L14gG43QZVgBUXLpGRLVitXAGMEl0Aw2aCmKXrBbTC13FwAxV
-        RWvAwAAAuxLqaQYLu6AAAAAASUVORK5CYII=
+        C20hWOKAQPlKYafi1UKvkDUj45LVvJ/L14gG43QZVgBUXLpGRLVitXAGMEl0Aw2aCmKXrBbTC13FwAxV
+        RWvAwAAArr7qZVOF0VMAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="tsbEditar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABYAAAAWCAYAAADEtGw7AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKpSURBVEhLrZVtSBNhHMCPiGi7O9e21EFRal/sJtt0bs40
-        nvZKhQX5QubObadN7UUmmH6ocCD4QVCyF9sHg8IvBqGEmKRfSsskFVEa9rZQv0RfK6Zt0/7d2RNUktzM
-        Hxx38P/xuzu4ex5iq0CI2I4vtwb2COmstNIzZxAVdlmpq8UmQoJHm8dtJVv8FczS1+ePIfJyFO7U5EXc
-        NqodjzeHEG32aJYjEyMAs7MAnZ2w4jwN5/gnZ+3JJNbiQ4i2+NC30NhTWJqeBggEAFgWVtNSoAZJvpSU
-        EDuwKh4hWleoDE8NtMHoyBMYHhqCz7W18D0tDe6alDGPjWzFqnh+RYN91RB6dBEmuyww2N8Hk01N0J2r
-        jHE2Oug8qkjAujj+jk7f1sJ4eyr0tLPQU1e86jHTcyU2uQzr4lgXDejWojdrVNBwIjHKWejXbiTbhXVx
-        bBStL5BHXTbJm7J8mRzr4hCivkJFONhb9Uf0RrUKLvFRzix9V+xIUGBdHOujmWvR63y0oUARdVul78ut
-        tBLr4vhXtKNKBb5CeYyzS0NxR8vNlNd3Sh5+1etdHy2Sx8rt5Ad+XdiNdfF4HPTc+IOz8Hbw/Fr0RdvP
-        aB0f5azkPJdPJWJVPGXmnfurjsuWF2e74OPCAAQfuuGaVwWNJxUrLhu1wNrJJKzGB2uhGm81HorMT3XA
-        wkwAQuOtcKU0aYVD1GKphUzGWvxU8B/62HA3TPRfhnv+w1HvMdlypYN+5kZSFVbih/9zUlgzBc31jiX+
-        tT+5LJTfiSR78Xjz8DvBBX6Rvl9kTnCkGwxKrcm0R52VdUBrMKh1RqNWk52dmZGTo1Fn5hzUGI2pjMGg
-        0uv1MoTQxluS309sE86CyDCI0ul0iYw+b1+GPjddiAoHfwPm9yjDMPGvu/8HQfwAylRUINjOX6MAAAAA
-        SUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKqSURBVEhLY6AWsLdnYIEyqQNiHLijk515L0Ta83yNc+ap
+        CbFg4IRKkQ/inblb65O0vn0+suP/z5OH/s/OsP4Z78LTC5UmD4AMbUrQ+/7z1MH//y9e/P9/6tT/f6LD
+        /2cCXR7jKs4NVUYaABnakm/3487RA/+/nTv3///06f//x8T8/6uk8D/DnvNTaCgDG1Qp8QBkaEGQ0Ncz
+        W3r+Hzq4//+unTv/f8zN/f9PSen/fHPh3wku3J1QpcQDmKFX1qX/v7M15//p2U7/t21a9/90Xd3/hRbC
+        vxNdeK9EewjxQZUTB9ANPTdN///xXsX/y3tj/i/PD/6b4Mh7LdRFkB+qnDiAYeh0A7ChkzMk/pf6iP5K
+        dOK9Hm/PLwBVThzAZ2ixj+CvOBfOG1E2/IJQ5cQBkKH5QYJfr6xNQzF0UrrE/xKgoYmOXLdC3PiEoMqJ
+        A5iGGoINnQg0tNRH6Fe8M9ftWGdeYahy4gAuQyekSfzPCxL8nejKdYdkQ2MdeVLzAwW+Xl6bimlosODv
+        WFfuu8ByQQSqnHiQ4MZ77fjqlP83t2WBDT3WAzE0H2hoojP3/UQbHlGoUuJBlCOHfJoX//eHF2f/f/Zg
+        y/8rG+L/96dK/C/zFfoT58LzIMaVWwyqlDQQ48RTNqXU6uf9MxP+P7gw/f+d453/qyPE/iTa8zyMcOIW
+        hyojHSQBE/rRXYv+n9pU9X9Bve2vVE/+78luvIfj7bkkoEpIB8CcoxDjyPO/sdjtG9DbL+KceOqj7Tll
+        oNLkA2BNkA0spFcEO/K5aZiaCutbWEhrGxkp65uaahuYmenrmZgY6pib62kbmmvqmZkpapmaShgbG/Pb
+        29vjr5Lq6xmYQDRIoZaWPY+BgYGolrG1nI6xpQbIUBAGWqCFbKiWlhbp5S5lgIEBAGMuVAhLZ2HGAAAA
+        AElFTkSuQmCC
 </value>
   </data>
   <data name="tsbEliminar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
