eliminada clase usuario, todos los atributos de usuario pertenecen a persona terminado formulario UsuarioDesktop corregidos errores

--- a/UI.Desktop/Usuarios.resx
+++ b/UI.Desktop/Usuarios.resx
@@ -143,33 +143,33 @@
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIHSURBVDhPY6AbqF8sxFexSiStbLXIutLVImdAuHy18Oqy
-        lSLJIDmoMsIgbSYDK9CQnvLVIn+A+D82XLBa5CdQTVf9fgYWqDbsoH6VKA9Qww1kzXMOhfxfe7YIjOce
+        lSLJIDmoMsIgbSYDK9CQnvLVIn+A+D82nLda5CdQTVf9fgYWqDbsoH6VKA9Qww1kzXMOhfxfe7YIjOce
         DvtfuUYcyXCh8/nr+QWg2lEByDagomswxStPZf3/9P3lf3Tw9ec7sOEwdaCgwOrS8lXCTTBF+69PgGrH
         DY7fmQc3tGy1cCPUGAgoXiTODZQAh9nSEylQLQgA04gOYC4FhSkouKDGMTCUrhEOgGl69ek2VDkC4DIQ
         FCSwMAVGUhjUOKB3VwvPAQn277KFKkUFuAwEgen7vSHyq4RXQo1jYChbJXwEJLjkeCJUGcIQXBgG1pzJ
         h4mdhBoHNHClyE6Q4KJj8VBlFBoI5HSCBHt3WkOVoQKoBigPFUzd5wmRXyWyAGocyIVCZjBNpETKx2/P
         4JFSsUbIBWocPFF/AEmAcgM6wGXg8pPpYHFQssndpsIONQ4CylYLBcE0br3U8P/vvz9QbdjB3mt9cItA
         BQbUGFQAlFwEUzRlrxtW77/98vD/zAN+yIbtZPjPwAg1AhXU1zMwAZPQXJhiEAalTVjhMGmPM1wchEtX
-        C20hWOKAQPlKYafi1UKvkDUj45LVvJ/L14gG43QZVgBUXLpGRLVitXAGMEl0Aw2aCmKXrBbTC13FwAxV
-        RWvAwAAArr7qZVOF0VMAAAAASUVORK5CYII=
+        C20hWOKAQPlKYafi1UKvkDUj45LV3J/L14gG43QZVgBUXLpGRLVitXAGMEl0Aw2aCmKXrBbTC13FwAxV
+        RWvAwAAAlhbqXbPd7r8AAAAASUVORK5CYII=
 </value>
   </data>
   <data name="tsbEditar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABYAAAAWCAYAAADEtGw7AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKqSURBVEhLY6AWsLdnYIEyqQNiHLijk515L0Ta83yNc+ap
-        CbFg4IRKkQ/inblb65O0vn0+suP/z5OH/s/OsP4Z78LTC5UmD4AMbUrQ+/7z1MH//y9e/P9/6tT/f6LD
-        /2cCXR7jKs4NVUYaABnakm/3487RA/+/nTv3///06f//x8T8/6uk8D/DnvNTaCgDG1Qp8QBkaEGQ0Ncz
-        W3r+Hzq4//+unTv/f8zN/f9PSen/fHPh3wku3J1QpcQDmKFX1qX/v7M15//p2U7/t21a9/90Xd3/hRbC
-        vxNdeK9EewjxQZUTB9ANPTdN///xXsX/y3tj/i/PD/6b4Mh7LdRFkB+qnDiAYeh0A7ChkzMk/pf6iP5K
-        dOK9Hm/PLwBVThzAZ2ixj+CvOBfOG1E2/IJQ5cQBkKH5QYJfr6xNQzF0UrrE/xKgoYmOXLdC3PiEoMqJ
-        A5iGGoINnQg0tNRH6Fe8M9ftWGdeYahy4gAuQyekSfzPCxL8nejKdYdkQ2MdeVLzAwW+Xl6bimlosODv
-        WFfuu8ByQQSqnHiQ4MZ77fjqlP83t2WBDT3WAzE0H2hoojP3/UQbHlGoUuJBlCOHfJoX//eHF2f/f/Zg
-        y/8rG+L/96dK/C/zFfoT58LzIMaVWwyqlDQQ48RTNqXU6uf9MxP+P7gw/f+d453/qyPE/iTa8zyMcOIW
-        hyojHSQBE/rRXYv+n9pU9X9Bve2vVE/+78luvIfj7bkkoEpIB8CcoxDjyPO/sdjtG9DbL+KceOqj7Tll
-        oNLkA2BNkA0spFcEO/K5aZiaCutbWEhrGxkp65uaahuYmenrmZgY6pib62kbmmvqmZkpapmaShgbG/Pb
-        29vjr5Lq6xmYQDRIoZaWPY+BgYGolrG1nI6xpQbIUBAGWqCFbKiWlhbp5S5lgIEBAGMuVAhLZ2HGAAAA
-        AElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKnSURBVEhLrZVfSBNxHMCPiGi7u53bUgdFqb3YKdt03rQ0
+        rv2lP744lcyd206bWjkMTB8qHAQ9CEr2x0b4YPRiEEqISfpSWiapiNKwfwv1JXqtmLZN+3a3fkElyc38
+        wHEH3w+fu4O73w/bKlgW244utwbuCO6ssZCzp1gi7LIQl8sKMBkabR63Bb/qr6aXvz5/DJGXY3CnvjDi
+        thIdaLw5xOgVj3YlMjkKMDcH0NUFq86TcEZ4cs6WiiMtMeLRxqJvofGnsDwzAxAIAHAcrGWkQT0r+1Je
+        ju1AqnTE6HlHUnh6sB3GRp/AyPAwfPb54HtGBvQw6pjHirchVTq/osH+Ogg9aoCpbjMMDfTDVGsr9BjV
+        Md5KBp1HVQqkS+Pv6MxtHUx0pENvBwe9vpI1j4mcL7cqKaRLY100oI9Hb9ZroLk4OcqbyddulkpCujQ2
+        ijYVK6Muq+xNZRGlRLo0xGijgwoH+2r/iN6o08AFIcqb5O/K7AoV0qWxPpoTj14Xos3FqqjbIn9fZSHV
+        SJfGv6KdtRpocChjvE0eSjhaZSK8jSWK8Ks+7/poqTJWZcM/COvCLqRLx2Mn5ycenIa3Q2fj0RftP6M+
+        Icpb8AW+iEhGqnQqTTv31R6nVpbmuuHj4iAEH7rhmlcDLSdUqy4rscjZ8BSkJgZnJlpuNR2KLEx3wuJs
+        AEITbXCpImWVZ4mlCjOeirTEqRY+9PGRezA5cBHu+g9HvceolRo7+czNyjVISRzhz0njTAT4m+zLwmt/
+        cpkJv5OV7UHjzSPsBOeERfp+qUlhz2QYta6gYHdWbu5+HcNk6Y1GnTYvLyc7P1+blZN/QGs0ptMMozEY
+        DBTLshtvSX4/tk08iyJNs4Rer0+mDYV7sw0HM8WoeAg3oH+P0jSd+Lr7f2DYD54LU9oaJUFJAAAAAElF
+        TkSuQmCC
 </value>
   </data>
   <data name="tsbEliminar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
